--- a/Project Login/Project Login.csproj
+++ b/Project Login/Project Login.csproj
@@ -92,11 +92,11 @@
     <Compile Include="EmployeeExtended.Designer.cs">
       <DependentUpon>EmployeeExtended.cs</DependentUpon>
     </Compile>
-    <Compile Include="Form1.cs">
+    <Compile Include="Login.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="Login.Designer.cs">
+      <DependentUpon>Login.cs</DependentUpon>
     </Compile>
     <Compile Include="InHotelCustomerDetails.cs">
       <SubType>Form</SubType>
@@ -142,8 +142,8 @@
     <EmbeddedResource Include="EmployeeExtended.resx">
       <DependentUpon>EmployeeExtended.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="Login.resx">
+      <DependentUpon>Login.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="InHotelCustomerDetails.resx">
       <DependentUpon>InHotelCustomerDetails.cs</DependentUpon>
