Connected to Database
Linked user with database
User can now login with valid user

--- a/Project Login/Project Login.csproj
+++ b/Project Login/Project Login.csproj
@@ -74,6 +74,7 @@
     <Compile Include="Customer Service.Designer.cs">
       <DependentUpon>Customer Service.cs</DependentUpon>
     </Compile>
+    <Compile Include="Database.cs" />
     <Compile Include="EmployeeDelete.cs">
       <SubType>Form</SubType>
     </Compile>
