Database linked with Room
Connection established between Add Room and Database
Rooms can be added now
Rooms added can be seen by clicking Load button

--- a/Project Login/Project Login.csproj
+++ b/Project Login/Project Login.csproj
@@ -119,6 +119,7 @@
     <Compile Include="Regstration.Designer.cs">
       <DependentUpon>Regstration.cs</DependentUpon>
     </Compile>
+    <Compile Include="Room.cs" />
     <EmbeddedResource Include="Add Room.resx">
       <DependentUpon>Add Room.cs</DependentUpon>
     </EmbeddedResource>
