--- a/Project Login/Project Login.csproj
+++ b/Project Login/Project Login.csproj
@@ -193,6 +193,12 @@
   <ItemGroup>
     <None Include="Resources\home-button.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\1828479.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\565503.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
